--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -10,9 +10,9 @@ loginUrl=https://www.amazon.in/ap/signin?openid.pape.max_auth_age=0&openid.retur
 registrationUrl=https://www.amazon.in/ap/register
 
 # ---------------- Test Data ----------------
-validMobile=9306138496        
-validEmail=ysappofficial@gmail.com
-validPassword=okayButWhy#28
+validMobile=enteryourphonenumber        
+validEmail=enteryouemailhere
+validPassword=enteryourpasshere
 invalidEmail=whatswrongwithuser@test.com
 invalidPassword=WhatsWrongWithPassword
 
@@ -22,7 +22,7 @@ searchBook2=Clean Code
 
 #---------------- Registration Test Data ----------------
 regEmail=sahilsh822108@wrongemail.com
-regMobile=9306138496
+regMobile=enteryourphonenumber
 regName=Sahil Sharma
 regPassword=Sahil@12321
 
@@ -33,4 +33,5 @@ screenshotPath=./screenshots/
 # ---------------- Misc ----------------
 timeout=30
 skipOnCaptcha=true
+
 
